# shock-talk

./: .gitignore  README.md
api/: .gitignore  main.py  requirements.txt
api/dsge/: __init__.py  bk.py  symbols.py  validate.py
api/dsge2latex/: fractions.py  latex_helpers.py
api/talk2dsge/: __init__.py  examples.yaml  talk2dsge.py
api/tests/dsge/: test_dsge.py
api/tests/dsge2latex/: test_dsge2latex.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EquationsPanel.tsx  Header.tsx  IRFChart.tsx  InputPanel.tsx  InputTabs.tsx  ModelSummary.tsx  ParameterConsole.tsx  ResultsPanel.tsx
lib/: pyproject.toml  requirements.txt
lib/dsge2latex/: __init__.py
lib/talk2dsge/: __init__.py
shocktalk/: .gitignore  __init__.py  pyproject.toml
shocktalk/dsge/: __init__.py  symbols.py  validate.py  yaml.py
shocktalk/talk2dsge/: examples.yaml  prompt.j2  talk2dsge.py
shocktalk/tests/dsge/: test_dsge.py
